--- a/packages/components/src/__actions__/Button/v3/subcomponents/PendingContent/PendingContent.module.css
+++ b/packages/components/src/__actions__/Button/v3/subcomponents/PendingContent/PendingContent.module.css
@@ -1,11 +1,11 @@
 .pendingContent {
   display: inline-flex;
   align-items: center;
-  gap: var(--pending-gap, var(--spacing-8));
+  gap: var(--pending-gap, var(--spacing-4));
 }
 
-.small {
-  --pending-gap: var(--spacing-4);
+.large {
+  --pending-gap: var(--spacing-8);
 }
 
 .spinnerHidden {
